# scout

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.api  Dockerfile.jobspy  Dockerfile.latex-mcp  README.md  docker-compose.yml  main.py  opencode.json  pyproject.toml
.opencode/: opencode.json
.opencode/plugins/: graphify.js
apps/api/: main.py  schemas.py
apps/api/routes/: candidate.py  chat.py  explanations.py  jobs.py  profiles.py  providers.py  ranking.py  search.py  settings.py  target_profiles.py
apps/jobspy_worker/: main.py  pyproject.toml
apps/latex_mcp_bridge/: main.py
apps/web/: Dockerfile  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
apps/web/src/: App.jsx  api.js  styles.css
apps/web/src/components/: app-sidebar.jsx  nav-user.jsx  workspace-shell.jsx
apps/web/src/components/ui/: alert-dialog.jsx  context-menu.jsx  sidebar.jsx
apps/web/src/lib/: forms.js  profile.js  sanitizeText.js  storage.js
docs/superpowers/plans/: 2026-06-01-chat-frontend.md  2026-06-01-mock-job-provider-adapters.md  2026-06-05-jobspy-rag-tool.md  2026-06-05-langgraph-chat-streaming.md  2026-06-07-candidate-dossier-ui.md  2026-06-07-candidate-knowledge-base.md  2026-06-18-chat-first-cv-orchestration.md  2026-06-18-classic-compact-cv-length.md
docs/superpowers/specs/: 2026-06-05-jobspy-rag-tool-design.md  2026-06-07-candidate-dossier-ui-design.md  2026-06-07-candidate-knowledge-base-design.md  2026-06-18-chat-first-cv-orchestration-design.md  2026-06-18-classic-compact-cv-length-design.md
(+15 files in other folders)
