[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db",
    "fastapi>=0.124",
    "providers",
    "python-multipart>=0.0.20",
    "rag",
    "services",
    "uvicorn>=0.38",
]

[tool.uv.sources]
db = { workspace = true }
providers = { workspace = true }
rag = { workspace = true }
services = { workspace = true }

[tool.uv.workspace]
members = ["packages/db", "packages/providers", "packages/rag", "packages/services"]
